# TriHarder

./: .gitignore  CMakeLists.txt  README.md
docs/: coding_guidelines.md
libs/triharder/: CMakeLists.txt  triharder.h
libs/triharder/src/: application.cpp  application.h
libs/triharder/src/core/: application.cpp  application.h  color.cpp  color.h  event.h  logging.cpp  logging.h  resource_allocator.h  result.h  sdl_context.cpp  sdl_context.h  window.cpp  window.h
research/spdlog/: CMakeLists.txt
research/spdlog/src/: main.cpp
research/triharder_lib_exp/: CMakeLists.txt
research/triharder_lib_exp/src/: main.cpp
src/: main.cpp  scene.h  scene_result.h
tests/triharder/: CMakeLists.txt
tests/triharder/core/: result_tests.cpp
